--- a/Project/Project.vcxproj.filters
+++ b/Project/Project.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Dot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Board.cppm">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
