--- a/Project/Project.vcxproj.filters
+++ b/Project/Project.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="Board.cppm">
       <Filter>Header Files</Filter>
     </ClCompile>
+    <ClCompile Include="Board.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
