Added operator>> for Player class

--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -136,6 +136,8 @@
     <ClCompile Include="Dot.cpp" />
     <ClCompile Include="Dot.cppm" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Player.cppm" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
