--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -133,6 +133,8 @@
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Board.cppm" />
+    <ClCompile Include="Bridge.cpp" />
+    <ClCompile Include="Bridge.cppm" />
     <ClCompile Include="Dot.cpp" />
     <ClCompile Include="Dot.cppm" />
     <ClCompile Include="main.cpp" />
