--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -132,12 +132,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Bulldozer.cpp" />
     <ClCompile Include="Dot.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
+    <ClInclude Include="Bulldozer.h" />
     <ClInclude Include="Dot.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
