created Mines class inherited from Dot and implemented the constructors

--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -134,11 +134,13 @@
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Dot.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mines.cpp" />
     <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
     <ClInclude Include="Dot.h" />
+    <ClInclude Include="Mines.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
