--- a/Project/Project.vcxproj.filters
+++ b/Project/Project.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Bulldozer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TwixtGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Bulldozer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TwixtGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
