--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Bulldozer.cpp" />
     <ClCompile Include="Dot.cpp" />
+    <ClCompile Include="GameStack.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="TwixtGame.cpp" />
@@ -142,6 +143,7 @@
     <ClInclude Include="Board.h" />
     <ClInclude Include="Bulldozer.h" />
     <ClInclude Include="Dot.h" />
+    <ClInclude Include="GameStack.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="TwixtGame.h" />
   </ItemGroup>
