--- a/Project/Project.vcxproj.filters
+++ b/Project/Project.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="TwixtGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameStack.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TwixtGame.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameStack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
