implemented the save current game option

--- a/Project/Project.vcxproj.filters
+++ b/Project/Project.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="ObjectInStack.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SaveGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ObjectInStack.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SaveGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
