--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ObjectInStack.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="SaveGame.cpp" />
     <ClCompile Include="TwixtGame.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -147,6 +148,7 @@
     <ClInclude Include="GameStack.h" />
     <ClInclude Include="ObjectInStack.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="SaveGame.h" />
     <ClInclude Include="TwixtGame.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
