--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="Dot.cpp" />
     <ClCompile Include="GameStack.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Mine.cpp" />
     <ClCompile Include="ObjectInStack.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="TwixtGame.cpp" />
@@ -146,6 +147,7 @@
     <ClInclude Include="Bulldozer.h" />
     <ClInclude Include="Dot.h" />
     <ClInclude Include="GameStack.h" />
+    <ClInclude Include="Mine.h" />
     <ClInclude Include="ObjectInStack.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="TwixtGame.h" />
