--- a/Project/Project.vcxproj
+++ b/Project/Project.vcxproj
@@ -138,6 +138,7 @@
     <ClCompile Include="GameStack.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mine.cpp" />
+    <ClCompile Include="Minimax.cpp" />
     <ClCompile Include="ObjectInStack.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SaveGame.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="Dot.h" />
     <ClInclude Include="GameStack.h" />
     <ClInclude Include="Mine.h" />
+    <ClInclude Include="Minimax.h" />
     <ClInclude Include="ObjectInStack.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="SaveGame.h" />
