--- a/Project/Project.vcxproj.filters
+++ b/Project/Project.vcxproj.filters
@@ -13,6 +13,7 @@
     <ClCompile Include="TwixtGame.cpp" />
     <ClCompile Include="Undo.cpp" />
     <ClCompile Include="Bridge.cpp" />
+    <ClCompile Include="Minimax.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Board.h" />
@@ -26,5 +27,6 @@
     <ClInclude Include="TwixtGame.h" />
     <ClInclude Include="Undo.h" />
     <ClInclude Include="Bridge.h" />
+    <ClInclude Include="Minimax.h" />
   </ItemGroup>
 </Project>
