--- a/app/app.vcxproj.filters
+++ b/app/app.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="DotWidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SettingsWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="MainMenuWidget.h">
@@ -66,12 +69,18 @@
     <QtMoc Include="DotWidget.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="SettingsWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="MainMenuWidget.ui">
       <Filter>Form Files</Filter>
     </QtUic>
     <QtUic Include="GameScreenWidget.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="SettingsWidget.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
