--- a/app/app.vcxproj
+++ b/app/app.vcxproj
@@ -89,7 +89,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Bridge.cpp" />
+    <ClCompile Include="Bulldozer.cpp" />
+    <ClCompile Include="Dot.cpp" />
+    <ClCompile Include="GameStack.cpp" />
+    <ClCompile Include="Mine.cpp" />
+    <ClCompile Include="Minimax.cpp" />
+    <ClCompile Include="ObjectInStack.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="SaveGame.cpp" />
     <ClCompile Include="SettingsWidget.cpp" />
+    <ClCompile Include="TwixtGame.cpp" />
+    <ClCompile Include="Undo.cpp" />
     <QtRcc Include="MainWindow.qrc" />
     <QtUic Include="GameScreenWidget.ui" />
     <QtUic Include="MainMenuWidget.ui" />
@@ -117,6 +129,20 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="SettingsWidget.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Board.h" />
+    <ClInclude Include="Bridge.h" />
+    <ClInclude Include="Bulldozer.h" />
+    <ClInclude Include="Dot.h" />
+    <ClInclude Include="GameStack.h" />
+    <ClInclude Include="Mine.h" />
+    <ClInclude Include="Minimax.h" />
+    <ClInclude Include="ObjectInStack.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="SaveGame.h" />
+    <ClInclude Include="TwixtGame.h" />
+    <ClInclude Include="Undo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
