--- a/app/app.vcxproj
+++ b/app/app.vcxproj
@@ -19,7 +19,7 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{3F7BEAE2-EE31-4EBC-85E4-062305157D91}</ProjectGuid>
     <Keyword>QtVS_v304</Keyword>
-    <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">10.0.22000.0</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">10.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">10.0.22621.0</WindowsTargetPlatformVersion>
     <QtMsBuild Condition="'$(QtMsBuild)'=='' OR !Exists('$(QtMsBuild)\qt.targets')">$(MSBuildProjectDirectory)\QtMsBuild</QtMsBuild>
   </PropertyGroup>
@@ -101,6 +101,7 @@
     <ClCompile Include="GameStack.cpp" />
     <ClCompile Include="Mine.cpp" />
     <ClCompile Include="Minimax.cpp" />
+    <ClCompile Include="Peg.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SaveGame.cpp" />
     <ClCompile Include="SettingsWidget.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="GameStack.h" />
     <ClInclude Include="Mine.h" />
     <ClInclude Include="Minimax.h" />
+    <ClInclude Include="Peg.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="SaveGame.h" />
     <ClInclude Include="Undo.h" />
