Add BridgeWidget class and connect it to gameboard

--- a/app/app.vcxproj
+++ b/app/app.vcxproj
@@ -96,6 +96,7 @@
   <ItemGroup>
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Bridge.cpp" />
+    <ClCompile Include="BridgeWidget.cpp" />
     <ClCompile Include="Bulldozer.cpp" />
     <ClCompile Include="Dot.cpp" />
     <ClCompile Include="GameStack.cpp" />
@@ -138,6 +139,7 @@
   <ItemGroup>
     <ClInclude Include="Board.h" />
     <ClInclude Include="Bridge.h" />
+    <QtMoc Include="BridgeWidget.h" />
     <ClInclude Include="Bulldozer.h" />
     <ClInclude Include="Dot.h" />
     <ClInclude Include="GameStack.h" />
