--- a/app/app.vcxproj.filters
+++ b/app/app.vcxproj.filters
@@ -91,6 +91,9 @@
     <ClCompile Include="TwixtGame.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BridgeWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="MainMenuWidget.h">
@@ -106,6 +109,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="SettingsWidget.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="BridgeWidget.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
